--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "start:dev": "nodemon server --ignore dist/ --ignore src/ & npm run build:dev",
     "build": "webpack",
-    "build:dev": "npm run build -- --watch --mode development"
+    "build:dev": "npm run build -- --watch --mode=development"
   },
   "keywords": [],
   "author": "",
